# hellforge

./: CMakeLists.txt  PKGBUILD  README.md  config.h.in  hellforge.spec  install.cmake
.github/workflows/: appimage.yml  flatpak.yml  linux.yml  release.yml  windows.yml
doc/: CMakeLists.txt
include/: ifiletypes.h  imanipulator.h  imapresource.h  imodel.h  imousetoolmanager.h  version.h
install/: colours.xml  input.xml  io.github.klaussilveira.hellforge.desktop  io.github.klaussilveira.hellforge.desktop.in  io.github.klaussilveira.hellforge.metainfo.xml  menu.xml  user.xml
install/ui/: aboutdialog.xrc  addpropertydialog.xrc  arraydialog.xrc  buildinggenerator.xrc  camwnd.xrc  conversationcmdeditor.xrc  conversationdialog.xrc  conversationeditor.xrc  convertmodeldialog.xrc  difficultyeditor.xrc  exportasmodeldialog.xrc  filterdialog.xrc  filtereditor.xrc  findandreplacedialog.xrc  gameconnection.xrc  lightinspector.xrc  materialeditor.xrc  mergecontroldialog.xrc  missioninfoeditdialog.xrc  missioninforeadmedialog.xrc  modelselector.xrc  objectivecomponentsdialog.xrc  objectiveconditionsdialog.xrc  objectiveseditor.xrc  osmimporter.xrc  patchcreatedialog.xrc  patchthickendialog.xrc  readableeditor.xrc  renderpreview.xrc  scatterdialog.xrc  skineditor.xrc  stairsgenerator.fbp  stairsgenerator.xrc  stimresponseeditor.xrc  sweep.xrc  texturetoolmanipulationpanel.xrc  tilemapeditor.xrc  vcscommitdialog.xrc  vcsstatusbar.xrc
libs/module/: ApplicationContextBase.cpp
libs/noise/: SimplexNoise.h
libs/render/: RenderableCollectorBase.h
libs/scene/: ChildPrimitives.cpp  EntityNode.cpp
libs/wxutil/: CMakeLists.txt  ConsoleView.cpp  FileChooser.cpp  GLWidget.cpp  GLWidget.h  UIThemeManager.cpp  UIThemeManager.h
libs/wxutil/dataview/: ResourceTreeViewToolbar.cpp  TreeViewItemStyle.h
libs/wxutil/dialog/: DialogBase.cpp
plugins/dm.gameconnection/: GameConnection.cpp
plugins/mcp/: CMakeLists.txt  Json.h  McpPlugin.cpp  McpPlugin.h
plugins/script/interfaces/: SelectionInterface.cpp  SelectionInterface.h
radiant/: CMakeLists.txt  RadiantApp.cpp
radiant/camera/: CamWnd.cpp  CamWnd.h  CameraWndManager.cpp  CameraWndManager.h
radiant/camera/tools/: CameraBrushCreatorTool.cpp  CameraBrushCreatorTool.h  CameraMouseToolEvent.h
radiant/eventmanager/: Event.h  EventManager.cpp  EventManager.h  GlobalKeyEventFilter.cpp  GtkKeyNormalize.h  GtkMenuAccel.cpp  GtkMenuAccel.h  MouseToolManager.cpp  MouseToolManager.h
radiant/selection/: ManipulateMouseTool.cpp
radiant/settings/: LocalisationModule.cpp
radiant/ui/: ManipulatorToggle.h  UserInterfaceModule.cpp
radiant/ui/about/: AboutDialog.cpp
radiant/ui/building/: BuildingGeneratorDialog.cpp  BuildingGeneratorDialog.h  BuildingGeometry.h
radiant/ui/commandpalette/: CommandMetadata.h  InsertPalette.cpp  InsertPalette.h
radiant/ui/einspector/: EntityInspector.cpp
radiant/ui/favourites/: FavouritesBrowser.cpp
radiant/ui/findshader/: FindShader.cpp
radiant/ui/mainframe/: AuiManager.cpp  PropertyNotebook.cpp  TopLevelFrame.cpp
radiant/ui/mapinfo/: MapInfoDialog.cpp
radiant/ui/materials/: MaterialSelector.cpp
radiant/ui/merge/: MapMergePanel.cpp
radiant/ui/mousetool/: BindToolDialog.cpp
radiant/ui/osm/: OsmGeometry.h  OsmImporterDialog.cpp  OsmImporterDialog.h
radiant/ui/prefdialog/: PrefDialog.cpp
radiant/ui/splash/: Splash.cpp
radiant/ui/stairs/: StairsGeneratorDialog.cpp  StairsGeneratorDialog.h  StairsGeometry.h
radiant/ui/statusbar/: StatusBarManager.cpp
radiant/ui/sweep/: SweepDialog.cpp  SweepDialog.h  SweepGeometry.h
radiant/ui/tilemap/: TileMapDialog.cpp  TileMapDialog.h  TileMapGenerators.h  TileMapGeometry.h
radiant/ui/transform/: TransformPanel.cpp  TransformPanel.h
radiant/xyview/: GlobalXYWnd.cpp
radiant/xyview/tools/: BrushCreatorTool.cpp
radiantcore/: CMakeLists.txt
radiantcore/brush/: BrushNode.cpp
radiantcore/brush/csg/: CSG.cpp  CSG.h
radiantcore/entity/doom3group/: StaticGeometryNode.cpp  StaticGeometryNode.h
radiantcore/filetypes/: FileTypeRegistry.cpp
radiantcore/map/: Map.cpp  Map.h  MapFileManager.cpp  MapResource.cpp  MapResource.h
radiantcore/map/format/: Quake1MapFormat.cpp  Quake1MapFormat.h  ValveVmfFormat.cpp  ValveVmfFormat.h
radiantcore/map/format/primitiveparsers/: Quake1BrushDef.cpp  Quake1BrushDef.h
radiantcore/model/: NullModelNode.cpp  NullModelNode.h  StaticModel.cpp  StaticModel.h  StaticModelNode.cpp  StaticModelNode.h
radiantcore/model/md5/: MD5ModelNode.cpp  MD5ModelNode.h
radiantcore/selection/: RadiantSelectionSystem.cpp
radiantcore/selection/algorithm/: General.cpp
radiantcore/selection/manipulators/: DragManipulator.cpp  DragManipulator.h  ManipulatorBase.cpp  ManipulatorComponents.cpp  ManipulatorComponents.h
resources/icons/: apply_theme_variables.sh  render.sh
test/: BuildingGenerator.cpp  CMakeLists.txt  ColourSchemes.cpp  Entity.cpp  EntityClass.cpp  StairsGenerator.cpp
test/resources/settings/: colours_userdefined.xml
test/resources/xml/: input.xml
tools/i18n/: build_pot.py
tools/mcp-server/: README.md  hellforge_mcp.py  pyproject.toml  run.sh
tools/msvc/: DarkRadiant.vcxproj  DarkRadiant.vcxproj.filters  DarkRadiantCore.vcxproj  DarkRadiantCore.vcxproj.filters  wxutillib.vcxproj  wxutillib.vcxproj.filters
tools/msvc/Tests/: Tests.vcxproj  Tests.vcxproj.filters
tools/scripts/: compile_release_package.ps1
